<resources>
    <string name="app_name">CustomProject</string>
    <string name="title_activity_view_date">viewDateActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="wouldn_t_it_be_awesome_if_you_could_have_a_doctor_in_your_pocket">Wouldn\'t it be awesome if you could have a Doctor in your pocket.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="username_or_email">Username or Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="discover_your_job">Discover your dream job.</string>
    <string name="ex_android_developer">Ex. Android Developer</string>
    <string name="latest_job">Latest Job</string>
    <string name="view_all">View All</string>
    <string name="suggestion">Suggestion</string>
    <string name="student">Student</string>
    <string name="entreprise">Entreprise</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="my_profile">MY PROFILE</string>
    <string name="edit_description">Edit description</string>
    <string name="manager_your_skills">Manager your skills</string>
    <string name="add_experience">Add experience</string>
    <string name="title">Title</string>
    <string name="ex_retail_sales_manager">Ex: Retail Sales Manager</string>
    <string name="employment_type">Employment type</string>
    <string name="company_name">Company name</string>
    <string name="ex_microsoft">Ex: Microsoft</string>
    <string name="location">Location</string>
    <string name="ex_casablanca_rabat">Ex: Casablanca, Rabat</string>
    <string name="experience">Experience</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="save">Save</string>
    <string name="education">Education</string>
    <string name="add_education">Add Education</string>
    <string name="university_name">University name</string>
    <string name="ex_mohamed_v_university">Ex: Mohamed V University</string>
    <string name="diploma_type">Diploma Type</string>
    <string name="major_name">Major name</string>
    <string name="ex_major">Ex: Major</string>
    <string name="university_student">University Student</string>
    <string name="select_photo">Select Photo</string>
    <string name="describe_yourself">Describe yourself</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter email</string>
    <string name="john_mail_com">john@mail.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="or">Or</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="cancel">Cancel</string>
</resources>
