<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />


    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create your \nAccount"
        android:textColor="#333"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline" />


    <EditText
        android:id="@+id/user_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edit_text_blank"
        android:hint="Enter Your Username"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv" />


    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text_blank"
        android:hint="Enter Your Email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/user_et" />


    <EditText
        android:id="@+id/phone_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text_blank"
        android:hint="@string/enter_your_phone"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />


    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_edit_text_blank"
        android:hint="Enter Your Password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/phone_et" />





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintLeft_toRightOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_et"  />


    <LinearLayout
        android:id="@+id/holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1.25"
            android:background="@color/grey_app" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Or continue with" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1.25"
            android:background="@color/grey_app" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/sign_up_providers_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/holder_2"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/holder">


        <ImageView
            android:id="@+id/connect_with_facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sign_up_with_facebook"
            android:src="@drawable/ic_facebook" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/connect_with_google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sign_up_with_facebook"
            android:src="@drawable/ic_google" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/connect_with_twitter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sign_up_with_facebook"
            android:src="@drawable/ic_twitter" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/holder_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_providers_holder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#333" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="@color/blue_text" />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />


</androidx.constraintlayout.widget.ConstraintLayout>