<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="Log in"
                android:textColor="#333"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/field_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintWidth_percent=".90">


                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="Email address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                ==

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/remember_me_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="@+id/field_holder"
                app:layout_constraintStart_toStartOf="@+id/field_holder"
                app:layout_constraintTop_toBottomOf="@+id/field_holder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/blue_text" />
            </LinearLayout>


            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/round_button"
                android:backgroundTint="@color/blue_text"
                android:text="Log in"
                android:textAllCaps="false"
                android:textColor="#FFF"
                app:layout_constraintEnd_toEndOf="@+id/remember_me_holder"
                app:layout_constraintStart_toStartOf="@+id/remember_me_holder"
                app:layout_constraintTop_toBottomOf="@+id/remember_me_holder" />


            <LinearLayout
                android:id="@+id/holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintLeft_toLeftOf="@+id/sign_in_btn"
                app:layout_constraintRight_toRightOf="@+id/sign_in_btn"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_btn">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1.25"
                    android:background="#333" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="Or" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1.25"
                    android:background="#333" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/social_holder"
                android:layout_width="330dp"
                android:layout_height="164dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/holder"
                app:layout_constraintStart_toStartOf="@id/holder"
                app:layout_constraintTop_toBottomOf="@+id/holder"
                app:layout_constraintWidth_percent=".60">


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_edit_text_blank"
                    android:drawableStart="@drawable/ic_google"
                    android:paddingStart="10dp"
                    android:text="@string/sign_in_with_google"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_edit_text_blank"
                    android:drawableStart="@drawable/ic_facebook"
                    android:paddingStart="10dp"
                    android:text="@string/sign_in_with_facebook"
                    android:textAllCaps="false" />
            </LinearLayout>


            <LinearLayout
                app:layout_goneMarginTop="80dp"
                android:id="@+id/holder_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/social_holder"
                app:layout_constraintLeft_toLeftOf="@+id/social_holder"
                app:layout_constraintRight_toRightOf="@+id/social_holder"
                app:layout_constraintTop_toBottomOf="@+id/social_holder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account"
                    android:textColor="#333" />

                <TextView
                    android:id="@+id/sign_up_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign up"
                    android:textColor="@color/blue_text" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>